--- a/index.html
+++ b/index.html
@@ -4,18 +4,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <title>ToDoList</title>
 </head>
 
 <body>
-  <div class="container">
-    <div class="todolistItem">
+  <section class="container pt-5" id="todolist"></section>
 
+  <!--
+    <form class="d-flex pb-4">
+      <input required="" class="form-control" type="text" name="" id="">
+      <button type="button" class="btn btn-outline-primary">Ajouter</button>
+    </form>
+  </section>
+
+
+  <main>
+    <div class="container">
+      <div class="todolistItem">
+        <div class="d-grid gap-2 d-md-block"></div>
+        <button type="button" class="btn btn-outline-primary">Toutes</button>
+        <button type="button" class="btn btn-outline-primary">A faire</button>
+        <button type="button" class="btn btn-outline-primary">Faites</button>
+      </div>
     </div>
-  </div>
-
-
-
+  </main> -->
 
 
 
